fix(article): remove apostrophe

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -427,7 +427,7 @@ realizadas no caminho raíz da aplicação, em determinada porta arbitrária.
 
 O módulo nativo \textit{perf\textunderscore hooks} da plataforma \textit{Node.JS}, é utilizado em todas as implementações para a obtenção 
 dos valores de tempo de início e fim da requisição. O tempo inicial, em milissegundos, é registrado assim que uma requisição é recebida, 
-e o tempo final é registrado uma vez que a finalização da requisição é observada pelo servidor, ou seja, no evento de finalização (\autoref{cod:base},' linha 11),
+e o tempo final é registrado uma vez que a finalização da requisição é observada pelo servidor, ou seja, no evento de finalização (\autoref{cod:base}, linha 11),
 quando, dentre outros motivos, o arquivo é transferido inteiramente ao solicitante.
 
 A primeira implementação desenvolvida (\autoref{cod:sync}), realiza a leitura do arquivo de 1.65 GB
